manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome
  name: awesome
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: awesome
  sessionAffinity: None
  type: ClusterIP
